--- a/gui/src/main/resources/progress.fxml
+++ b/gui/src/main/resources/progress.fxml
@@ -25,8 +25,8 @@
             <RowConstraints />
          </rowConstraints>
          <children>
-            <PieChart fx:id="chartProgress" legendVisible="false" styleClass="chartProgress" title="Progress" />
-            <PieChart fx:id="chartResults" legendVisible="false" styleClass="chartResults" title="Results" GridPane.columnIndex="1" />
+            <PieChart fx:id="chartProgress" legendVisible="false" styleClass="chartProgress" title="%progress.progress.chart" />
+            <PieChart fx:id="chartResults" legendVisible="false" styleClass="chartResults" title="%progress.results.chart" GridPane.columnIndex="1" />
             <VBox alignment="TOP_CENTER" fillWidth="false" minHeight="-Infinity" minWidth="-Infinity" GridPane.rowIndex="1">
                <children>
                    <GridPane styleClass="chartLegend">
@@ -42,11 +42,11 @@
                        </rowConstraints>
                        <children>
                            <Circle radius="7" styleClass="keyDone" />
-                           <Label text="Marked as Known/Unknown" GridPane.columnIndex="1" />
+                           <Label text="%progress.progress.marked" GridPane.columnIndex="1" />
                            <Label fx:id="labelValueDone" text="123 Words" GridPane.columnIndex="2" />
                            <Label fx:id="labelPercentDone" text="1%" GridPane.columnIndex="3" />
                            <Circle radius="7" styleClass="keyRemaining" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                           <Label text="Unmarked" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                           <Label text="%progress.progress.unmarked" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                            <Label fx:id="labelValueRemaining" text="29 Words" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                            <Label fx:id="labelPercentRemaining" text="2%" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                        </children>
@@ -70,19 +70,19 @@
                     </rowConstraints>
                      <children>
                           <Circle radius="7" styleClass="keyKnown" />
-                          <Label text="Marked as Known" GridPane.columnIndex="1" />
+                          <Label text="%progress.results.known" GridPane.columnIndex="1" />
                           <Label fx:id="labelValueKnown" text="123 Words" GridPane.columnIndex="2" />
                           <Label fx:id="labelPercentKnown" text="1%" GridPane.columnIndex="3" />
                           <Circle radius="7" styleClass="keyUnknown" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                          <Label text="Marked as Unknown" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                          <Label text="%progress.results.unknown" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                           <Label fx:id="labelValueUnknown" text="29 Words" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                           <Label fx:id="labelPercentUnknown" text="2%" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                           <Circle radius="7" styleClass="keyUnseenUnfiltered" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                          <Label text="Unmarked" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                          <Label text="%progress.results.unmarked" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                           <Label fx:id="labelValueUnseenUnfiltered" text="3 Words" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                           <Label fx:id="labelPercentUnseenUnfiltered" text="3%" GridPane.columnIndex="3" GridPane.rowIndex="2" />
                           <Circle radius="7" styleClass="keyFiltered" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                          <Label text="Filtered" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                          <Label text="%progress.results.filtered" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                           <Label fx:id="labelValueFiltered" text="25 Words" GridPane.columnIndex="2" GridPane.rowIndex="3" />
                           <Label fx:id="labelPercentFiltered" text="4%" GridPane.columnIndex="3" GridPane.rowIndex="3" />
                      </children>
