--- a/gui/src/main/resources/settings.fxml
+++ b/gui/src/main/resources/settings.fxml
@@ -23,13 +23,13 @@
     <bottom>
         <ButtonBar styleClass="buttonBar" BorderPane.alignment="CENTER">
             <buttons>
-                <Button fx:id="buttonOk" mnemonicParsing="false" text="Enable Filters" />
-                <Button fx:id="buttonCancel" mnemonicParsing="false" text="Cancel" />
+                <Button fx:id="buttonOk" mnemonicParsing="false" text="%filter.main.button.ok" />
+                <Button fx:id="buttonCancel" mnemonicParsing="false" text="%filter.main.button.cancel" />
             </buttons>
         </ButtonBar>
     </bottom>
    <top>
-      <Label styleClass="description" text="Choose the words you want to show" BorderPane.alignment="CENTER" />
+      <Label styleClass="description" text="%filter.main.title" BorderPane.alignment="CENTER" />
    </top>
    <center>
       <VBox BorderPane.alignment="CENTER">
@@ -45,11 +45,11 @@
                   <RowConstraints />
                </rowConstraints>
                <children>
-                  <Label styleClass="fieldLabel" text="Minimum number of letters in a word:" />
+                  <Label styleClass="fieldLabel" text="%filter.main.prompt.minimum.letters" />
                   <TextField fx:id="fieldMinimumLetters" alignment="CENTER_RIGHT" prefColumnCount="4" text="9999" GridPane.columnIndex="1" />
-                  <Label styleClass="fieldLabel" text="Minimum number of occurrences of a word:" GridPane.rowIndex="1" />
+                  <Label styleClass="fieldLabel" text="%filter.main.prompt.minimum.occurrences" GridPane.rowIndex="1" />
                   <TextField fx:id="fieldMinimumOccurrences" alignment="CENTER_RIGHT" prefColumnCount="4" text="9999" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Label styleClass="fieldLabel" text="Include words starting with a capital letter:" GridPane.rowIndex="2" />
+                  <Label styleClass="fieldLabel" text="%filter.main.prompt.capitals" GridPane.rowIndex="2" />
                   <CheckBox fx:id="fieldInitialCapital" mnemonicParsing="false" selected="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
             </GridPane>
@@ -64,7 +64,7 @@
                 <RowConstraints />
               </rowConstraints>
                <children>
-                  <Label styleClass="fieldLabel" text="Word lists to exclude:" GridPane.hgrow="ALWAYS" />
+                  <Label styleClass="fieldLabel" text="%filter.main.lists.title" GridPane.hgrow="ALWAYS" />
                    <Button fx:id="buttonAddGridFile" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
                        <graphic>
                         <HBox alignment="CENTER" spacing="2.0">
@@ -75,7 +75,7 @@
                         </HBox>
                        </graphic>
                        <tooltip>
-                           <Tooltip text="Add a text document or spreadsheet with words to exclude" />
+                           <Tooltip text="%filter.main.lists.button.grid.tip" />
                        </tooltip>
                    </Button>
                    <Button fx:id="buttonAddSessionFile" mnemonicParsing="false" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
@@ -88,7 +88,7 @@
                         </HBox>
                      </graphic>
                        <tooltip>
-                           <Tooltip text="Add a VocabHunter session file with words to exclude" />
+                           <Tooltip text="%filter.main.lists.button.session.tip" />
                        </tooltip>
                    </Button>
                   <ListView fx:id="listExcludedFiles" prefHeight="150.0" prefWidth="600.0" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
@@ -104,21 +104,21 @@
                                   <RowConstraints />
                               </rowConstraints>
                               <children>
-                                  <Label text="Use the buttons above to add lists of words to exclude:" GridPane.columnSpan="2" />
+                                  <Label text="%filter.main.lists.empty.title" GridPane.columnSpan="2" />
                                   <HBox alignment="CENTER" spacing="2.0" GridPane.rowIndex="1">
                                       <children>
                                           <FontAwesomeIconView styleClass="buttonFilterGridIcon" />
                                           <FontAwesomeIconView styleClass="buttonAddIcon" />
                                       </children>
                                   </HBox>
-                                  <Label text="Add a text document or spreadsheet with words to exclude" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+                                  <Label text="%filter.main.lists.empty.grid" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
                                   <HBox alignment="CENTER" spacing="2.0" GridPane.rowIndex="2">
                                       <children>
                                           <FontAwesomeIconView styleClass="buttonFilterSessionIcon" />
                                           <FontAwesomeIconView styleClass="buttonAddIcon" />
                                       </children>
                                   </HBox>
-                                  <Label text="Add a VocabHunter session file with words to exclude" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+                                  <Label text="%filter.main.lists.empty.session" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
                               </children>
                           </GridPane>
                       </placeholder>
